--- a/client/receptor.html
+++ b/client/receptor.html
@@ -2,11 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Espectador</title>
     <link rel="stylesheet" href="styles.css">
     <script src="socket.io/socket.io.js"></script> <!-- Aquí se carga la librería de Socket.IO (La que permite la comunicación bidireccional). -->
-    <title>Espectador</title>
 </head>
 <body>
     <img id="play">
@@ -14,7 +13,7 @@
     <script>
         var socket = io();
         
-        socket.on("stream", (imagen) => {
+        socket.on("stream", function(imagen) {
             let img = document.getElementById("play");
             img.src = imagen;
         });
